[tool.poetry]
name = "repl_python3_scooter-war-clan-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
discord-ui = "^5.1.5"
components = "^1.2.8"
discord-components = "^2.1.2"
discord-interactions = "^0.3.0"
"discord-interactions.py" = "^0.0.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
