[tool.poetry]
name = "repl_python3_scooter-war-clan-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
discord-ui = "^5.1.5"
components = "^1.2.8"
discord-components = "^2.1.2"
discord-interactions = "^0.3.0"
"discord-interactions.py" = "^0.0.8"
Flask = "^2.0.2"
aiocron = "^1.8"
utils = "^1.0.1"
discord-ext-slash = "^0.9.2"
"slash-discord.py" = "^1.0.5"
discord-py-slash-command = "^3.0.3"
discord-pretty-help = "^1.3.3"
requests = "^2.27.1"
pyjokes = "^0.6.0"
Cogs = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
